--- a/ProductSaleWebApp/ProductSaleWebApp/Views/Graphic/Index.cshtml
+++ b/ProductSaleWebApp/ProductSaleWebApp/Views/Graphic/Index.cshtml
@@ -1,14 +1,14 @@
 ﻿@{
-    ViewData["Title"] = "Sales Records";
+    ViewData["Title"] = "Graphic Cards";
 }
 
 <h2>@ViewData["Title"]</h2>
 
 <div class="card mb-3">
-  <h3 class="card-header">Card header</h3>
+  <h3 class="card-header">GTX 1080ti</h3>
   <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
-    <h6 class="card-subtitle text-muted">Support card subtitle</h6>
+    <h5 class="card-title">Good graphic card</h5>
+    <h6 class="card-subtitle text-muted">If you're looking for quality and availability this is the perfect option for you.</h6>
   </div>
   <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
     <rect width="100%" height="100%" fill="#868e96"></rect>
